syntax = "proto3";
package pch;
option go_package = "github.com/nireo/pch/pb";
import "google/protobuf/timestamp.proto";

// ChatService provides messaging and key exchange functionality
service ChatService {
  // Register a new user with identity keys and prekeys
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Upload additional one-time prekeys
  rpc UploadOTPs(UploadOTPsRequest) returns (UploadOTPsResponse);
  
  // Fetch a user's prekey bundle for initiating communication
  rpc FetchBundle(FetchBundleRequest) returns (FetchBundleResponse);
  
  // Bidirectional stream for real-time messaging
  rpc MessageStream(stream ClientMessage) returns (stream ServerMessage);
}

// Registration messages
message RegisterRequest {
  string username = 1;
  bytes identity_key = 2;
  bytes verifying_key = 3;
  SignedPrekey signed_prekey = 4;
  repeated SignedPrekey one_time_prekeys = 5;
}

message RegisterResponse {
  string message = 1;
}

message SignedPrekey {
  bytes public_key = 1;
  bytes signature = 2;
  google.protobuf.Timestamp created_at = 3;
}

// One-time prekey management
message UploadOTPsRequest {
  string username = 1;
  repeated SignedPrekey one_time_prekeys = 2;
}

message UploadOTPsResponse {
  int32 uploaded_count = 1;
  int32 total_otps = 2;
}

// Prekey bundle fetch
message FetchBundleRequest {
  string username = 1;
}

message FetchBundleResponse {
  PrekeyBundle bundle = 1;
}

message PrekeyBundle {
  bytes identity_key = 1;
  bytes signed_prekey = 2;
  bytes prekey_signature = 3;
  bytes one_time_prekey = 4;
}

// Streaming message types
message ClientMessage {
  oneof message_type {
    JoinRequest join = 1;
    KeyExchangeMessage key_exchange = 2;
    EncryptedMessage encrypted_message = 3;
    HeartbeatMessage heartbeat = 4;
  }
}

message ServerMessage {
  oneof message_type {
    JoinResponse join_response = 1;
    KeyExchangeMessage key_exchange = 2;
    EncryptedMessage encrypted_message = 3;
    HeartbeatMessage heartbeat = 4;
  }
}

// Join messages
message JoinRequest {
  string username = 1;
}

message JoinResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// Key exchange for X3DH
message KeyExchangeMessage {
  string sender_id = 1;
  string receiver_id = 2;
  InitialMessage initial_message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message InitialMessage {
  bytes identity_key = 1;
  bytes ephemeral_key = 2;
  bytes one_time_prekey = 3;
}

// Encrypted messages with Double Ratchet
message EncryptedMessage {
  string sender_id = 1;
  string receiver_id = 2;
  RatchetMessage ratchet_message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message RatchetMessage {
  bytes public_key = 1;
  int32 previous_chain_length = 2;
  int32 message_number = 3;
  bytes ciphertext = 4;
  bytes nonce = 5;
}

// Heartbeat for connection keepalive
message HeartbeatMessage {
  google.protobuf.Timestamp timestamp = 1;
}

// User storage record
message UserRecord {
  string username = 1;
  bytes identity_key = 2;
  bytes verifying_key = 3;
  SignedPrekey signed_prekey = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp last_seen = 6;
}
